Implement conditional constants (#1373)
Signed-off-by: Pablo Herrera <pabloherrerapalacio@gmail.com>