@@ -5,8 +5,6 @@ import static tc.oc.pgm.api.map.MapSource.DEFAULT_VARIANT;
 import java.io.IOException;
 import java.io.InputStream;
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -28,19 +26,16 @@ import tc.oc.pgm.api.map.includes.MapInclude;
 import tc.oc.pgm.api.map.includes.MapIncludeProcessor;
 import tc.oc.pgm.util.xml.DocumentWrapper;
 import tc.oc.pgm.util.xml.InvalidXMLException;
-import tc.oc.pgm.util.xml.Node;
 import tc.oc.pgm.util.xml.SAXHandler;
 import tc.oc.pgm.util.xml.XMLUtils;
 
 public class MapFilePreprocessor {
 
-  private static final ThreadLocal<SAXBuilder> DOCUMENT_FACTORY =
-      ThreadLocal.withInitial(
-          () -> {
-            final SAXBuilder builder = new SAXBuilder();
-            builder.setSAXHandlerFactory(SAXHandler.FACTORY);
-            return builder;
-          });
+  private static final ThreadLocal<SAXBuilder> DOCUMENT_FACTORY = ThreadLocal.withInitial(() -> {
+    final SAXBuilder builder = new SAXBuilder();
+    builder.setSAXHandlerFactory(SAXHandler.FACTORY);
+    return builder;
+  });
 
   private static final Pattern CONSTANT_PATTERN = Pattern.compile("\\$\\{(.+?)}");
 
@@ -79,27 +74,16 @@ public class MapFilePreprocessor {
       variantIds.add(XMLUtils.parseRequiredId(variant));
     }
 
-    document.runWithoutVisitation(
-        () -> {
-          MapInclude global = includeProcessor.getGlobalInclude();
-          if (global != null) {
-            document.getRootElement().addContent(0, global.getContent());
-            includes.add(global);
-          }
+    document.runWithoutVisitation(() -> {
+      MapInclude global = includeProcessor.getGlobalInclude();
+      if (global != null) {
+        document.getRootElement().addContent(0, global.getContent());
+        includes.add(global);
+      }
 
-          preprocessChildren(document.getRootElement());
-          source.setIncludes(includes);
-        });
-
-    for (Element constant :
-        XMLUtils.flattenElements(document.getRootElement(), "constants", "constant", 0)) {
-      boolean isDelete = XMLUtils.parseBoolean(constant.getAttribute("delete"), false);
-      String text = constant.getText();
-      if ((text == null || text.isEmpty()) != isDelete)
-        throw new InvalidXMLException(
-            "Delete attribute cannot be combined with having an inner text", constant);
-      constants.put(XMLUtils.parseRequiredId(constant), isDelete ? null : constant.getText());
-    }
+      preprocessChildren(document.getRootElement());
+      source.setIncludes(includes);
+    });
 
     // If no constants are set, assume we can skip the step
     if (!constants.isEmpty()) {
@@ -109,25 +93,31 @@ public class MapFilePreprocessor {
     return document;
   }
 
+  String getVariant() {
+    return variant;
+  }
+
+  Set<String> getVariantIds() {
+    return variantIds;
+  }
+
+  Map<String, String> getConstants() {
+    return constants;
+  }
+
   private void preprocessChildren(Element parent) throws InvalidXMLException {
     for (int i = 0; i < parent.getContentSize(); i++) {
       Content content = parent.getContent(i);
-      if (!(content instanceof Element)) continue;
+      if (!(content instanceof Element child)) continue;
 
-      Element child = (Element) content;
-      List<Content> replacement = null;
-
-      switch (child.getName()) {
-        case "include":
-          replacement = processIncludeElement(child);
-          break;
-        case "if":
-          replacement = processConditional(child, true);
-          break;
-        case "unless":
-          replacement = processConditional(child, false);
-          break;
-      }
+      List<Content> replacement =
+          switch (child.getName()) {
+            case "include" -> processIncludeElement(child);
+            case "if" -> processConditional(child, true);
+            case "unless" -> processConditional(child, false);
+            case "constant" -> processConstant(child);
+            default -> null;
+          };
 
       if (replacement != null) {
         parent.removeContent(i);
@@ -141,25 +131,29 @@ public class MapFilePreprocessor {
 
   private List<Content> processIncludeElement(Element element) throws InvalidXMLException {
     MapInclude include = includeProcessor.getMapInclude(element);
-    if (include != null) {
-      includes.add(include);
-      return include.getContent();
-    }
-    return Collections.emptyList();
+    if (include == null) return List.of();
+    includes.add(include);
+    return include.getContent();
   }
 
-  private List<Content> processConditional(Element el, boolean shouldContain)
-      throws InvalidXMLException {
+  private List<Content> processConditional(Element el, boolean expect) throws InvalidXMLException {
+    return ConditionalChecker.test(this, el) == expect ? el.cloneContent() : List.of();
+  }
 
-    Node node = Node.fromRequiredAttr(el, "variant", "has-variant");
-    List<String> filter = Arrays.asList(node.getValue().split("[\\s,]+"));
+  private List<Content> processConstant(Element el) throws InvalidXMLException {
+    boolean isDelete = XMLUtils.parseBoolean(el.getAttribute("delete"), false);
+    String text = el.getTextNormalize();
+    if ((text == null || text.isEmpty()) != isDelete)
+      throw new InvalidXMLException(
+          "Delete attribute cannot be combined with having an inner text", el);
 
-    boolean contains =
-        "variant".equals(node.getName())
-            ? filter.contains(this.variant)
-            : filter.stream().anyMatch(variantIds::contains);
+    var id = XMLUtils.parseRequiredId(el);
+    var value = isDelete ? null : text;
 
-    return contains == shouldContain ? el.cloneContent() : Collections.emptyList();
+    boolean fallback = XMLUtils.parseBoolean(el.getAttribute("fallback"), false);
+    if (!fallback || !constants.containsKey(id)) constants.put(id, value);
+
+    return List.of();
   }
 
   private void postprocessChildren(Element parent) throws InvalidXMLException {
@@ -177,11 +171,9 @@ public class MapFilePreprocessor {
 
     for (int i = 0; i < parent.getContentSize(); i++) {
       Content content = parent.getContent(i);
-      if (content instanceof Element) {
-        postprocessChildren((Element) content);
-      } else if (content instanceof Text) {
-        Text text = (Text) content;
-
+      if (content instanceof Element el) {
+        postprocessChildren(el);
+      } else if (content instanceof Text text) {
         String result = postprocessString(parent, text.getText());
         if (result == null) {
           parent.removeContent(text);
@@ -196,7 +188,7 @@ public class MapFilePreprocessor {
   private @Nullable String postprocessString(Element el, String text) throws InvalidXMLException {
     Matcher matcher = CONSTANT_PATTERN.matcher(text);
 
-    StringBuffer result = new StringBuffer();
+    StringBuilder result = new StringBuilder();
     while (matcher.find()) {
       String constant = matcher.group(1);
       String replacement = constants.get(constant);
